# lip-reader

./: .gitignore  render.yaml  spec.md
backend/: .env  pyproject.toml  requirements.txt  setup_avhubert.sh
backend/app/: main.py
backend/app/config/: settings.py
backend/app/domain/: __init__.py  interfaces.py  models.py  schemas.py
backend/app/graph/: workflow.py
backend/app/models/: __init__.py  av_hubert.py  base.py  factory.py
backend/app/presentation/: rest.py  websocket.py
backend/app/services/: decoder.py  face_detection.py  file_storage.py  inference.py  metrics.py  mouth_extraction.py  tensor_service.py  validation.py  video.py
backend/app/tests/: conftest.py  test_decoder.py  test_graph.py  test_validation.py
backend/app/tracking/: tracker.py
frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: KeepAlive.tsx  LoadingSpinner.tsx  ProgressBar.tsx  TranscriptView.tsx  UploadZone.tsx  WebcamView.tsx
frontend/src/services/: api.ts  websocket.ts
frontend/src/types/: index.ts
